coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__attachment_chips.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                           
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯  /repo                                                                 
                                                                                
❯ read utils/foo/bar.rs                                                         
                                                                                
● Read(utils/foo/bar.rs · lines 1-3)                                            
  └ 1  fn foo() {}                                                              
    2                                                                           
    3  // done                                                                  
                                                                                
◆ memory · utils/foo/CLAUDE.md                                                  
                                                                                
◇ utils/foo/bar.rs                                                              
                                                                                
⏺ Here is the file.                                                             
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←2 · tool 1                   
 repo
