coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__command_palette_inline.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯ /c                                                                            
────────────────────────────────────────────────────────────────────────────────
▸ /clear    Clear conversation                                                  
  /compact  Compact conversation
