coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__completed_parallel_tool_batch.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                           
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
❯ Investigate                                                                   
                                                                                
  ‖ 2 in parallel · Bash, Glob                                                  
                                                                                
● Bash(ls -la)                                                                  
  └ Cargo.toml                                                                  
    src                                                                         
                                                                                
● Glob(**/*.rs)                                                                 
  └ src/main.rs                                                                 
    src/lib.rs                                                                  
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←2 · tool 2
