coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__edit_diff.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                                           
 │●│ │●│  opus-4  *  auto                                                                       
 ╰─╯ ╰─╯                                                                                        
                                                                                                
❯ bump the version                                                                              
                                                                                                
● Edit(Cargo.toml)                                                                              
    ╶╴ @@ -1 +1 @@                                                                              
    1   │ -version = "0.1.0"                                                                    
      1 │ +version = "0.2.0"                                                                    
    2   │ -edition = "2021"                                                                     
      2 │ +edition = "2024"                                                                     
                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                               
────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←1 · tool 1
