coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__empty_state.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   no model selected                                                    
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 auto | ↑0 ↓0 · cache 0% | ctx 0% | 0 msgs
