coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__error_modal_non_retryable.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
            ┌ Error ───────────────────────────────────────────────┐            
            │Connection refused after 3 retries                    │            
            │                                                      │            
            │Category: network                                     │            
            │Non-retryable — this turn cannot be resumed.          │            
            │                                                      │            
            │Press Esc to dismiss.                                 │            
            │                                                      │            
            │                                                      │            
            └──────────────────────────────────────────────────────┘            
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0                            
 ? ask · shift+tab to cycle
