coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__error_overlay_non_retryable.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────
❯           ┌ Error ───────────────────────────────────────────────┐            
────────────└──────────────────────────────────────────────────────┘────────────
 opus-4 * auto | ↑0 ↓0 · cache 0% | ctx 0% | 0 msgs
