coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__file_diff.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
                                                                                
  📝  src/main.rs                                                                
          1 │ +fn main() {                                                      
          2 │ +    println!("hello");                                           
          3 │ +}                                                                
     1      │ -fn main() {}                                                     
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0% | ctx 0% | 1 msgs
